--- a/Object_JS/index.html
+++ b/Object_JS/index.html
@@ -9,24 +9,7 @@
 </head>
 
 <body>
-    <style>
-        body {
-            background-color: teal;
-        }
-
-        div {
-            padding: 25px 25px;
-            display: inline-block;
-            margin-left: 25%;
-            margin-top: 15%;
-            font-size: 30px;
-            font-family: Arial, Helvetica, sans-serif;
-            color: rgb(3, 2, 3);
-        }
-    </style>
-
-    <div id="check"></div>
-    <script src="main.js"></script>
+    <script src="assArray.js"></script>
 </body>
 
 </html>
