--- a/SPA/index.html
+++ b/SPA/index.html
@@ -18,18 +18,15 @@
                         <img src="images/logo.svg" alt="logo">
                     </a>
                 </div>
-                <!-- <section class="header__content"> -->
-                    <h1 class="header__title">Скидка 30% </br> на первый заказ</h1>
-                    <h4 class="header__desc">
-                        Новым клиентам при заказе через сайт
-                        или мобильное приложение
-                    </h4>
-                    <button class="header__btn">Получить скидку</button>
-                <!-- </section> -->
+                <h1 class="header__title">Скидка 30% </br> на первый заказ</h1>
+                <h4 class="header__desc">
+                    Новым клиентам при заказе через сайт
+                    или мобильное приложение
+                </h4>
+                <button class="header__btn">Получить скидку</button
             </div>
         
             <div class="accordion">
-                
                 <a class="accordion__share-widget" id="accordion" href="#">
                     <img src="images/share-widget.svg" alt="share-widget">
                 </a>
